@@ -1,1 +1,1 @@
-CREATE TABLE IF NOT EXISTS `#__news` (`id` INTEGER PRIMARY KEY AUTO_INCREMENT, `time` INT NOT NULL, `name` VARCHAR(30), `news` TEXT);
+CREATE TABLE IF NOT EXISTS `#__news` (`id` INTEGER PRIMARY KEY AUTO_INCREMENT, `time` INT NOT NULL, `name` VARCHAR(30), `news` TEXT, `sticky` TINYINT NOT NULL);
